[gd_scene load_steps=10 format=3 uid="uid://cjbn05exase44"]

[ext_resource type="Script" path="res://Scripts/Life_stingtree.gd" id="1_01ep7"]
[ext_resource type="Texture2D" uid="uid://mcf1kqtc8vkl" path="res://Art/sting_tree_0.png" id="2_g314o"]
[ext_resource type="Texture2D" uid="uid://ci4ijvovafp7s" path="res://Art/sting_tree_1.png" id="3_j28kq"]
[ext_resource type="Texture2D" uid="uid://diu458iwe5o1o" path="res://Art/sting_tree_0_in_tree.png" id="3_julhu"]
[ext_resource type="Texture2D" uid="uid://d33tc6xrqimmi" path="res://Art/sting_tree_2.png" id="4_uj4pe"]
[ext_resource type="Texture2D" uid="uid://ct4q6i1xlhp06" path="res://Art/sting_tree_3.png" id="5_xen52"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ld3jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv5i7"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dldvs"]
size = Vector2(64, 64)

[node name="StingTree" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_01ep7")

[node name="Timer" type="Timer" parent="."]

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CapsuleShape2D_ld3jv")

[node name="Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("2_g314o")
centered = false

[node name="Sprite_0_in_tree" type="Sprite2D" parent="."]
texture = ExtResource("3_julhu")
centered = false

[node name="Sprite_1" type="Sprite2D" parent="."]
texture = ExtResource("3_j28kq")
centered = false

[node name="Sprite_2" type="Sprite2D" parent="."]
texture = ExtResource("4_uj4pe")
centered = false

[node name="Sprite_3" type="Sprite2D" parent="."]
texture = ExtResource("5_xen52")
centered = false

[node name="fruitplace" type="ColorRect" parent="Sprite_3"]
visible = false
offset_left = 10.0
offset_top = 10.0
offset_right = 181.0
offset_bottom = 99.0

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Collision_0" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dv5i7")

[node name="Collision_1" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dldvs")

[node name="Fruit_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="timeout" from="Fruit_Timer" to="." method="_on_fruit_timer_timeout"]
